[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Tutorial/TutorialCaption.gd" type="Script" id=1]
[ext_resource path="res://UI/Tutorial/shootC.png" type="Texture" id=2]
[ext_resource path="res://UI/Tutorial/shootK.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 300, 266 )

[node name="TutorialCaption" type="Node2D"]
script = ExtResource( 1 )

[node name="SpriteC" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="SpriteK" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 310 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
